# G-Augmented-Reality-Toolkit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  G Augmented-Reality Toolkit Install Development Dependencies.vipc  G Augmented-Reality Toolkit Shared Binaries AR.vipb  G Augmented-Reality Toolkit Shared Binaries Core.vipb  G Augmented-Reality Toolkit Shared Binaries DNN.vipb  G Augmented-Reality Toolkit Shared Binaries Feature Detection.vipb  G Augmented-Reality Toolkit Shared Binaries Tesseract.vipb  G Augmented-Reality Toolkit Shared Binaries Video IO.vipb  G Augmented-Reality Toolkit Shared Binaries.vipb  G Augmented-Reality Toolkit.vipb  LICENSE  README.md  antora-playbook.yml  build-docs.sh  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json  x64-gcc-build-example.sh  x64-linux-dektop-build.sh  x64-msvc-build.bat-example  x64-win-build.bat  x64-win-build.bat-example  x86-msvc-build.bat-example  x86-win-build.bat  x86-win-build.bat-example
.vscode-example/: settings.json
.vscode-example-linux/: c_cpp_properties.json  launch.json  settings.json
.vscode-example-win/: c_cpp_properties.json  launch.json  settings.json
LabVIEW/: COPYRIGHT  Calibrate Camera.vi  Capture Example.vi  G-Augmented-Reality-Toolkit.lvproj  Image Example.vi  Mapped Pixel Pointer Example.vi  antidoc.config  g_ar_toolkit.lvlib  test_list.vi
docs/: G-ARTK-docs.lvproj  Interop.md  TODO.txt  antora.yml
docs-UI/: package-lock.json  package.json
patches/: apriltag.patch  ros_msft_cam.patch  ros_usb_cam.patch  v4l2_list_devices.patch  vcpkg-opencv-4-11-to-overlays.patch  whereami.patch
shared-binary/: CMakeLists.txt  LICENCE
shared-binary/g_ar_toolkit/: CMakeLists.txt
shared-binary/g_ar_toolkit/include/g_ar_toolkit/capture/: enumerator.hpp  stream.hpp
shared-binary/g_ar_toolkit/include/g_ar_toolkit/capture/linux/: utils.hpp
shared-binary/g_ar_toolkit/include/g_ar_toolkit/capture/win/: source_reader.hpp
shared-binary/g_ar_toolkit/include/g_ar_toolkit/lv_interop/: lv_array_1d.hpp  lv_array_2d.hpp  lv_array_md.hpp  lv_edvr_managed_object.hpp  lv_enums.hpp  lv_error.hpp  lv_functions.hpp  lv_image.hpp  lv_mat.hpp  lv_point_correspondence.hpp  lv_str.hpp  lv_types.hpp  lv_u32_colour.hpp  lv_vec_types.hpp
shared-binary/g_ar_toolkit/src/: image_add_weighted.cpp  image_argb_channel_operations.cpp  image_bitwise.cpp  image_blur.cpp  image_canny.cpp  image_clahe.cpp  image_colour.cpp  image_copy.cpp  image_copy_array.cpp  image_copy_from_buffer.cpp  image_copy_pixmap.cpp  image_copy_raw_memory_ptr.cpp  image_crop.cpp  image_draw.cpp  image_draw_picture.cpp  image_flip.cpp  image_greyscale_to_argb.cpp  image_negate.cpp  image_new.cpp  image_read_file.cpp  image_resize.cpp  image_threshold.cpp  image_transform.cpp  image_write_file.cpp
shared-binary/g_ar_toolkit/src/capture/: CMakeLists.txt  stream.cpp
shared-binary/g_ar_toolkit/src/capture/linux/: decoders.cpp  enumerator.cpp  stream.cpp
shared-binary/g_ar_toolkit/src/capture/win/: enumerator.cpp  source_reader.cpp  utils.cpp
shared-binary/g_ar_toolkit/src/lv_interop/: lv_camera_parameters.cpp  lv_error.cpp  lv_functions.cpp  lv_image.cpp  lv_point_correspondence.cpp  lv_str.cpp  lv_u32_colour.cpp  lv_vec_types.cpp
shared-binary/g_ar_toolkit_ar/: CMakeLists.txt
shared-binary/g_ar_toolkit_ar/src/: ar_camera_calibration.cpp  ar_chessboard.cpp  ar_detect_chessboard.cpp  ar_image_distortion.cpp  ar_image_undistort.cpp  ar_image_undistortion.cpp  ar_obj_loader.cpp  ar_project_points.cpp  ar_quaternion.cpp  ar_rodrigues.cpp  ar_solve_pnp.cpp  image_detect_chessboard.cpp  image_distortion.cpp  image_undistortion.cpp
shared-binary/g_ar_toolkit_dnn/: CMakeLists.txt  feature_detection_barcode.cpp  feature_detection_text.cpp
shared-binary/g_ar_toolkit_dnn/src/: dnn_barcode.cpp  dnn_detection_model.cpp  dnn_model.cpp  dnn_text.cpp  dnn_we_chat_qr.cpp
shared-binary/g_ar_toolkit_fd/: CMakeLists.txt  feature_detection_hough.cpp  feature_detection_qr_encoder.cpp  feature_detection_zxing.cpp
shared-binary/g_ar_toolkit_fd/src/: feature_detection_apriltag.cpp  feature_detection_contours.cpp  feature_detection_hough.cpp  feature_detection_qr_detector.cpp  feature_detection_qr_encoder.cpp  feature_detection_zxing.cpp
shared-binary/g_ar_toolkit_tesseract/: CMakeLists.txt  feature_detection_tesseract_text.cpp
shared-binary/g_ar_toolkit_tesseract/src/: tesseract_text.cpp
shared-binary/g_ar_toolkit_videoio/: CMakeLists.txt  video_file_io.cpp
shared-binary/g_ar_toolkit_videoio/src/: video_io.cpp
shared-binary/include/g_ar_toolkit/capture/linux/: decoders.hpp
shared-binary/include/g_ar_toolkit/lv_interop/: lv_edvr_managed_object.hpp  lv_image.hpp  lv_mat.hpp  lv_str.hpp  lv_types.hpp  lv_vec_types.hpp
shared-binary/src/: CMakeLists.txt  ar_camera_calibration.cpp  ar_point_correspondences.cpp  ar_project_points.cpp  ar_rodrigues.cpp  ar_solve_pnp.cpp  capture.cpp  feature_detection_apriltag.cpp  feature_detection_chessboard.cpp  feature_detection_contours.cpp  feature_detection_qr_detector.cpp  feature_detection_we_chat_qr.cpp  feature_detection_zxing.cpp  image_copy_from_buffer.cpp  image_copy_raw_memory_ptr.cpp  image_draw_picture.cpp  image_find_nonzero.cpp  image_in_range.cpp  image_insert.cpp  image_morphology.cpp  image_rotate.cpp  image_undistort.cpp  image_write_file.cpp  shape_utils.cpp  video_file_io.cpp
shared-binary/src/capture/linux/: utils.cpp
shared-binary/src/capture/win/: stream.cpp
shared-binary/src/lv_interop/: CMakeLists.txt  lv_enums.cpp  lv_functions.cpp  lv_image.cpp  lv_mat.cpp  lv_str.cpp  lv_u32_colour.cpp  lv_vec_types.cpp
src/: ar_camera_calibration.cpp  ar_obj_loader.cpp  ar_project_points.cpp  ar_quaternion.cpp  ar_rodrigues.cpp  ar_solve_pnp.cpp  capture-context.cpp  capture-stream.cpp  capture.cpp  capture_context.cpp  capture_stream.cpp  feature_detection.cpp  feature_detection_apriltag.cpp  feature_detection_barcode.cpp  feature_detection_chessboard.cpp  feature_detection_contours.cpp  feature_detection_hough.cpp  image-add-weighted.cpp  (+66 more)
(+2526 files in other folders)
